--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client2",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -22,5 +22,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "babel-loader": "^8.0.6",
+    "react": "^16.9.0",
+    "react-router-dom": "^5.0.1"
   }
 }
