--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,15 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "dependencies": {
+    "axios": "^0.19.0",
+    "mkdirp": "^0.5.1",
+    "node-sass": "*",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "3.0.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -22,10 +31,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "dependencies": {
-    "babel-loader": "^8.0.6",
-    "react": "^16.9.0",
-    "react-router-dom": "^5.0.1"
   }
 }
