--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.14.0",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "mongodb": "^3.1.0-beta4",
+    "multer": "^1.4.2",
     "request": "^2.88.0"
   },
   "engines": {
