--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "express-form-data": "^2.0.10",
     "mongodb": "^3.1.0-beta4",
     "multer": "^1.4.2",
     "request": "^2.88.0"
